[[Spesiaal:LintErrors/bogus-image-options]], replaced: ||thumb| → |thumb| using [[Project:AWB|AWB]]

--- a/Stadsrechten.mw
+++ b/Stadsrechten.mw
@@ -2,20 +2,20 @@
 
 Howal hier mangs meerdere rechten (zoas marktrecht, tolrecht en et recht um stadsmuren te bouwen) under wödden verstoan, ging et feajlek um et recht van de [[Stad (woonstee)|stad]] op eigen rechtsproak. An burgerleu wierd et recht verleend euren zaak te bepleiten veur nen rechtbank van "gelieken" in plaatse van underworpen te wean an et recht van den landheer. Feajlek is der dus sproake van stadsrecht en neet van stadsrechten. In n ofzunderlek veurrecht kon ok et recht op wetgeaving ([[Stadskeure|keur]]) wödden egevven en et recht um eigen scholten en stadsbestuurders te beneumen.
 Stadsrechten waren nen trad in de untwekkeling van et rechtsstelsel in et [[Heilige Roomse Riek|Europa]]. 
-Mit et vort goan van et [[Feodalisme|feodaal stelsel]] en et toonemmende belang van den centroalen (rechts-)stoat kwam der ok n ende an et stadsrecht. 
+Mit et vort goan van et [[Feodalisme|feodaal stelsel]] en et toonemmende belang van den centroalen (rechts-)stoat kwam der ok n ende an et stadsrecht.
 
-Der bestoande vergeliekboare rechten in olde kulturen, mit name dee van Mesopotamië woar zi-j den [[kidinnutu]] kenden. 
+Der bestoande vergeliekboare rechten in olde kulturen, mit name dee van Mesopotamië woar zi-j den [[kidinnutu]] kenden.
 
 == Achtergroand ==
 Al under de Romeinen verkreg [[Nimweage]] marktrechten. Vanof et joar 1000 wierden veurrechten deur laandsheern an neaderzettingen egoavn. Mangs in ruul veur geld, mangs bewust um steadnvörming te bevorderen. Vanof de tied dat dizze veurrechten in éne kere in n totaalpakket wödden an-eboden, spreakt wi-j van stadsrechten. Stadsrechten maken van ne neaderzetting ne antrekkeleke vestigingsplaatse veur koopleu. Van den economiesen bleuj den hiervan de uutkumste was, profiteerden den heer deur et heffen van [[belastingen]].
 
-[[Ofbeelding:Stadsrechten Utrecht oorkonde 1122 bron Utrechts Archief.jpg||thumb|200px|]]
-De eerste Nederlaandse plaatse dee, in olde geskriften van et Bisdom Utrecht uut 956 as stad vermeld steet is [[Deventer]]. De plaatse was al in de 2de helfte van de 8ste eeuwe ontstoan moar wöd dus ruum 200 joar later al as stad eneumd. Woarschienlek is et eerste deel mit stadsrecht veur Deventer in de 1ste helfte van de 11de eeuwe op-esteld. De stad verkreg dit recht van den Duutsen keizer, ok de steadn dee doarop volgden: Grunning, Utrecht en Stavoren verkreggen eure rechten van den Duutsen Keizer. De rechten van de aandere Nederlaandse steadn wödden namens him verleend deur feodale heern. Alle steadn waren schatplichteg an dizze heern, ze vörmden ne gans belangrieke bronne van inkomsten veur dizze heern. Der bunt wal völle plaetse in Nederlaand woar den anvang tot et opstellen van dee rechten uutging van de bevölking van dee plaatse zelf. 
+[[Ofbeelding:Stadsrechten Utrecht oorkonde 1122 bron Utrechts Archief.jpg|thumb|200px]]
+De eerste Nederlaandse plaatse dee, in olde geskriften van et Bisdom Utrecht uut 956 as stad vermeld steet is [[Deventer]]. De plaatse was al in de 2de helfte van de 8ste eeuwe ontstoan moar wöd dus ruum 200 joar later al as stad eneumd. Woarschienlek is et eerste deel mit stadsrecht veur Deventer in de 1ste helfte van de 11de eeuwe op-esteld. De stad verkreg dit recht van den Duutsen keizer, ok de steadn dee doarop volgden: Grunning, Utrecht en Stavoren verkreggen eure rechten van den Duutsen Keizer. De rechten van de aandere Nederlaandse steadn wödden namens him verleend deur feodale heern. Alle steadn waren schatplichteg an dizze heern, ze vörmden ne gans belangrieke bronne van inkomsten veur dizze heern. Der bunt wal völle plaetse in Nederlaand woar den anvang tot et opstellen van dee rechten uutging van de bevölking van dee plaatse zelf.
 
 De rechten van de oldste of veurnaamste stad binnen n gewest (groafschap, hartogdom of bisdom) deenden meangsmoal as veurbeeld veur de rechten van aandere steedn in dat gewest. Wanneer in de dochterstad juridiese oneanigheid ontstoand, gingen zee op "steadenvoart" noar de moderstad um doar uutleg van et recht te vroagen. Deur bestudering van de verskillende stadsrechtcharters hebt zi-j hele “stambeume” hiervan veur de ofzunderleke gewesten in Nederlaand op können stellen.
 
 Vanof de 13de eeuwe wödden bepoalde rechten ok lös van den heer ofekundigd. De toon riezende machtige Vloamse steadn Gent en Brugge waren hier et eerste met. Laandsheern probierden wal zeggenschop te holden op de samenstelling van et stadsbestuur. Het dool van de stad was deurgoans derop ericht um doar helemoal vri-j in te wödden.
-In latere eeuwen was et mangs den geldnood van laandheern, den dertoo leidden dat de steaden uutbreiding van eure rechten kochten. Stadsrechten brachten dus walvoart en walvoart bracht stadsrechten. Zo wisten steaden noa verlöp van tied ne hoge moate van zelfstandegheid te verkriegen. Der waarn steadn dee zelfs wissen uut te greujen tot [[stadstoat|stadstoaten]] (zelfs noe vörmt Hamburg en Bremen in Duutslaand nog aparte Bundesländer). Grunnen (mit ziene Ommelaanden) was tot de Habsburgse machtsoavernoame in dit gewest (1528) begin 16de eeuwe binnen de Nederlaanden de stad die et meest noar dizze benaming op weg was. Den macht in de stoaten van den Nederlaandse en Belgiese gewesten lag ende 15de eeuwe al in gans belangrieke moate bi-j de steadn.
+In latere eeuwen was et mangs den geldnood van laandheern, den dertoo leidden dat de steaden uutbreiding van eure rechten kochten. Stadsrechten brachten dus walvoart en walvoart bracht stadsrechten. Zo wisten steaden noa verlöp van tied ne hoge moate van zelfstandegheid te verkriegen. Der waarn steadn dee zelfs wissen uut te greujen tot [[stadstoat]]en (zelfs noe vörmt Hamburg en Bremen in Duutslaand nog aparte Bundesländer). Grunnen (mit ziene Ommelaanden) was tot de Habsburgse machtsoavernoame in dit gewest (1528) begin 16de eeuwe binnen de Nederlaanden de stad die et meest noar dizze benaming op weg was. Den macht in de stoaten van den Nederlaandse en Belgiese gewesten lag ende 15de eeuwe al in gans belangrieke moate bi-j de steadn.
 
 Den graaf van Vloanderen verleenden in de 12de eeuwe stadsrecht an n tröpken plaetse in Zeeuws-Vloanderen, under aandere: Eerdenburg, Hulst, Beervleet. Zi-j waarn gebouwd op de rechten dee de stad [[Atrecht]] in de löppe van de joaren mit de Graven van Vloanderen was oaveren-ekommen. De Hartogen van Broabant vörmden noa de Graven van Vloanderen as et woare den tweeden trop “stadsrechtverleaners” in  Nederlaand, zi-j namen de rechten van [[Leuven]] as veurbeeld. Et Deaventerse stadsrecht gold as veurbeeld veur alle Oaveriesselse steadn, en dat van de stad Utrecht dus veur de oaverege Utrechtse steadn. De Hartogen van [[Gelre]] namen de stadsrechten van [[Zutfent]] as veurbeeld. De graven van Hollaand dee den lesten groep “stadsrechtverleaners” vörmden namen et Leuvense model oaver.
 
@@ -33,10 +33,8 @@ Stadsrechten hadden betrekking op zaken as:
 **'''[[Stapelrecht]]''': et recht um bepoald handelsgood as eerste te möggen stapelen (Opsloan) en verkopen.
 **'''[[Tolrecht]]''': et recht um [[Tolweg|tol]] te heffen, eigen börgers waren doarvan meesttieds vri-j-esteld wat bi-jdroog an de antrekkelekheid as woonplaatse.
 **'''[[Muntrecht]]''': enkele steadn waren vri-j eur eigen geld te sloan.
-
 *'''Vri-jheden''': 
-**'''Persoonleke vri-jheid''': mangs gold den reagel 'Stadsloch mek vri-j'. I'j waren gin [[heurege]] meer van den landheer, moar vri-j um te goan en stoan woar da'j wollen. 
-
+**'''Persoonleke vri-jheid''': mangs gold den reagel 'Stadsloch mek vri-j'. I'j waren gin [[heurege]] meer van den landheer, moar vri-j um te goan en stoan woar da'j wollen.
 *'''Bestuur''': 
 **'''Stadsbestuur''': de bettere börgeri-je kon mangs zelf de bestuurders kezen dee in den stadsroad zitting mossen nemmen.
 **'''Rechtsproak en wetgaeving''': Binnen an-egeaven grenzen was de stad vri-j um zelf wetgeaving en rechtsproake uut te oefenen. De stad wierd hierdeur bestuurlek uut et umrengende laand elicht woar de wetgaeving van den landheer gold. Börgerleu hadden et recht veur nen eigen rechtbank (van "gelieken") te verschienen. Mangs wodden bepoald dat ne ni-je stad veur ziene rechtsproake was anewezzen op ne aandere, al lenger bestoande, stad.
@@ -46,7 +44,7 @@ Et gebeed buten ne stad kon mangs [[laandsrecht]] kriegen. Zo kreggen [[Kennemer
 
 ==Ende van stadsrechten==
 Mit den greuj van den centroalen stoat kwam der langzaam n ende an et stadsrecht. In de noordeleke Laege laanden wierden de leste stadsrechten feajlek verleend in [[1586]] (Willemstad). In de tied van et bestoan van de [[Republiek der Vereanegde Nederlanden|Republiek]] verweerf alleneg Blokziel (1672) nog n stadsrecht. Noa de [[Bataafse Republeek|Bataafse Umwenteling]] (1795) wödden gemeenten noar Fraans veurbeeld vörm-egeaven en wodden et stadsrecht - bi-j wet - of-eschaft. Howal deels hersteld noa [[1813]] kreggen steadn neet helemoale de bevoogdheden trög dee zi-j veur dee tied hadden: rechtspraoke en wetgeaving wödden meer en meer nen zaak van et centroal gezag. 
-Noa de groandwet van [[1848]] en de Gemeentewet van [[1851]] is et verskil tussen darpen en steadn kommen te vervallen. 
+Noa de groandwet van [[1848]] en de Gemeentewet van [[1851]] is et verskil tussen darpen en steadn kommen te vervallen.
 
 Stadsrechten dee in et beginne van de 19de eeuwe nog bunt egeaven (an [[Delfshaven]] in [[1825]] veur et leste) bunt neet te vergelieken mit dee uut de Middeleeuwn en meer symbolies van eerd. Deur sommigen wodt [[Den Haag]] en [[Assen]] neet as stad ezene, umdat dizze plaetse eure stadsrechten kreggen in de Franse tied.
 
@@ -68,6 +66,6 @@ Stadsrechten dee in et beginne van de 19de eeuwe nog bunt egeaven (an [[Delfshav
 ==Uutgaonde verwiezing==
 * [http://www.stadsrechten.nl/ Lieste van den stadsrechten in Nederlaand]
 
-[[Kategorie:Achterhooks_artikel]]
+[[Kategorie:Achterhooks artikel]]
 [[Kategorie:Stad]]
 [[Kategorie:Recht]]
