--- a/Allemannen_(volk).mw
+++ b/Allemannen_(volk).mw
@@ -1,10 +1,10 @@
-[[Ofbeelding:Alemanni expansion.png|thumb||Naederzettingen en uutbreiding van de Allemannen]]
+[[Ofbeelding:Alemanni expansion.png|thumb|Naederzettingen en uutbreiding van de Allemannen]]
 De '''Allemannen''' (ok '''Alamannen''', '''Alemannen''') vormden n verbond van [[Germoanen|Germaanse]] volken, beheurende tot den trop van de [[Sueven]], met as machtigsten stamme de [[Semnonen]]. Eure name wis op ne verzameling van volken: "alle mensen". In et joar [[360]] hadden zi-j nog 14 verskillende hartoagen.
 Zi-j wonden eursprönkelek tussen den [[Rijn|Rien]] en de [[Donau]], in et Zwaben van vandage, vanwoar zi-j vanof 212 raegelmoatig plundertochten ondernamen op Romeins gebeed.
 
 Eure name laeft wieter in de namen veur de dialecten van t [[Zwitsers Duuts]] en de name dee-t de Spanjoarden en Fransen veur [[Duutsland]] hebt:
 * [[Spaans|Spoans]]: ''Allemania''
-* [[Fraans]]: ''l'Allemagne'' 
+* [[Fraans]]: ''l'Allemagne''
 
 {{Germoanen}}
 
