[[Spesiaal:LintErrors/bogus-image-options]], replaced: |thumb|| → |thumb| using [[Project:AWB|AWB]]

--- a/Amelaands.mw
+++ b/Amelaands.mw
@@ -14,7 +14,7 @@ iso3 = n.v.t. |
 }}
 [[Bestaand:Lânkaart lokaasje Amelânsk.PNG|thumb|De lokaosie van t Amelaandse dialekt in de perveensie [[Frieslaand]].]]
 [[Bestaand:Ameland_klederdracht.jpg|thumb|[[Amelaand]]s kostuum mit [[ooriezer]].]]
-[[Bestaand:2012-05-05_Ameland_16.JPG|thumb||[[Amelaand]] mit de [[vuurtoren]] op de achtergrond.]]
+[[Bestaand:2012-05-05_Ameland_16.JPG|thumb|[[Amelaand]] mit de [[vuurtoren]] op de achtergrond.]]
 [[Bestaand:Ameland.JPG|right|thumb|t [[Straand]] op [[Amelaand]].]]
 t '''Amelaands''' (in t dialekt zels: ''Amelands'') is n [[Hollaans (dialekt)|Hollaands]]-[[Westerlauwers Fries|Fries]] mingdialekt dat spreuken wordt op t [[Frieslaand|Friese]] [[Waddenaailanden|Waddeneilaand]] [[Amelaand]]. t Ontston in de periode van de [[16e eeuw|16e ieuw]] tot de [[18e eeuw|18e ieuw]] uut n verminging van [[Hollaands]]e [[dialekt]]vorms mit t [[Fries]] dat oorspronkelik op t [[eilaand]] spreuken wordden, en is veural nauw verwaant an t [[Midslaands]] van t buureilaand [[Terschelling|Terskelling]]. Hoewel t Amelaands deur de toenemende [[toerisme|massatoerisme]] op Amelaand in beskeide maote onder drok staot van t [[Standerdnederlaands]], is t an de aandere kaante t ienigste dialekt van de Waddeneilaanden dat him tot now toe goed wet te haandhaeven en zels nog deur t merendiel van de eilaandjongeren spreuken wordt.
 
@@ -97,7 +97,7 @@ Ok bin der n peer verskillen bi'j partie verkleiningsvorms, liek as "dörpien", 
 
 Disse kleine dialektverskillen bin te verklaoren deurdat de meensken uut t [[Nederlaandse Hervormde Karke|hervormde]] westen en t [[Rooms-Katholieke Karke|rooms-katholieke]] oosten van Amelaand vroeger grotendiels langes mekeer henne leefden. n Darde [[geleuf|denominaosie]] wordde op t eilaand vormd deur de [[mennisten]], die ok meer in t westen woonde. Hoewel der tussen de hervormden en de mennisten somtieden wel huweliken sleuten wordden, was dat tussen de [[protestantisme|protestaantse]] groepen en de rooms-katholieken ondaenkber. Zo beston der dus niet n protte onderling kontakt, en ontstonnen der twie subdialekten.
 
-Hoewel de [[geleuf|geleufsskeiding]] tegenwoordig amper nog n rolle speult, is der onderwiels n beskeiden [[kultuur]]verskil tussen de beide bevolkingsgroepen of eilaandgebieden ontstaon. t Oostelike diel van t eilaand is [[ekonomie]]s naemelik zwat hielendal ofhaankelik van t [[toerisme]], en staot der dus slim positief tegenover. In t westen, waor ze nog veur n groot diel van de [[laandbouw]] leven, is dat vule minder t geval. Bovendat bin de Amelaanders heur onderwiels zo bewust worden van t dialektonderskeid ("daor zeggen ze ..., mar ''wi'j'' zeggen ..."), dat ok daordeur de verskillen in staand hoolden worden. Daornaost is an de oostkaante van t eilaand de invloed van t Nederlaands starker, deurdat daor de [[veerboot]] ankomt, de meerste toeristen daor vakaansie vieren, en deurdat de meerste import daor woont. An de aandere kaante vormt de ienigste middelbere skoele op t eilaand, in Nes, weer n stark nivellerende faktor, omdat alle eilaandkiender daor saemenkommen en de onderlinge kontakten van de jongere generaosies dus vule groter binnen.
+Hoewel de [[geleuf]]sskeiding tegenwoordig amper nog n rolle speult, is der onderwiels n beskeiden [[kultuur]]verskil tussen de beide bevolkingsgroepen of eilaandgebieden ontstaon. t Oostelike diel van t eilaand is [[ekonomie]]s naemelik zwat hielendal ofhaankelik van t [[toerisme]], en staot der dus slim positief tegenover. In t westen, waor ze nog veur n groot diel van de [[laandbouw]] leven, is dat vule minder t geval. Bovendat bin de Amelaanders heur onderwiels zo bewust worden van t dialektonderskeid ("daor zeggen ze ..., mar ''wi'j'' zeggen ..."), dat ok daordeur de verskillen in staand hoolden worden. Daornaost is an de oostkaante van t eilaand de invloed van t Nederlaands starker, deurdat daor de [[veerboot]] ankomt, de meerste toeristen daor vakaansie vieren, en deurdat de meerste import daor woont. An de aandere kaante vormt de ienigste middelbere skoele op t eilaand, in Nes, weer n stark nivellerende faktor, omdat alle eilaandkiender daor saemenkommen en de onderlinge kontakten van de jongere generaosies dus vule groter binnen.
 
 {{Bron|
 *[http://www.ameland.nl/over-ameland/het-eiland_41147/item/dialect_20313.html Informaosie over t Amelaands op de gemientelike webstee van Amelaand]
