[[Spesiaal:LintErrors/bogus-image-options]], replaced: |thumb|| → |thumb| using [[Project:AWB|AWB]]

--- a/Gehucht.mw
+++ b/Gehucht.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Waldkirch Oberwil.jpg|thumb||300px|Et gehucht Weiler Oberwil in Zwitserlaand]]
+[[Ofbeelding:Waldkirch Oberwil.jpg|thumb|300px|Et gehucht Weiler Oberwil in Zwitserlaand]]
 Een '''gehucht''' is ne kleine wonplaatse. De uutleg van gehucht kent n antal meugelekheden. Zo steet et veur n [[daarp|darp]] dat – deur leu dee et n gehucht neumt – te klein wödt evonden um darp eneumd te wödden en steet et veur ne [[buurtschop]] dee op n bepoald vlak wal ne erkende eigen plaatse is.
 
 Gehuchten bunt net as buurtschoppen mangs ontstoan in den volksmond as benaming veur de plaatse van ne verzameling van huze/boerderi-jen of möllen, ok wal ne [[neaderzetting]] eneumd, moar in teggenstelling tot buurtschoppen bunt gehuchten wal op-enommen in de officiële stoatkundige annalen as zelfstandige plaetse.
@@ -14,5 +14,5 @@ Een ander verskil tussen ne buurtschop en gehucht is dat buurtschoppen mangsmoal
 
 {{bron|* De Topografische Gids van Nederland, Frank ten Hoven}}
 
-[[Kategorie:Achterhooks_artikel]]
+[[Kategorie:Achterhooks artikel]]
 [[Kategorie:Geografie]]
