*Empty MediaWiki Message*

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -28,7 +28,7 @@ Et Nedersaksisch stamp van et [[Oldsaksisch|Oudsaksisch]] aof, de taal van de [[
 
 Et Nedersaksisch is nauw verwant an et [[Fries]], mer oek an et [[Engels]], dat kömp onder aandere deurdat der een bult Saksen uut [[Noord-Duutslaand]] in et jaor 450 naor [[Groot-Brittannie|Engelaand]] ezeild bin en daor samen mit de [[Angelen]], [[Juten]] en de [[Friezen]] de [[Angelsaksen]] evormp hebben. De overeenkomsten tussen de dree talen zollen uutwiezen naor een gemeenschappelike herkomst.
 
-Van de [[16e eeuw|16e]] tot de [[20e eeuw]] was et Nedersaksies, wat toe nog gewoon ''plat'' heetten, niet meer de taal van de haandelsluui mer steeds meer van de eenvoudige luui. Op schoele en in de karke wördden et Nederlaands of et Hoogduuts de voertaal. Vanaof de 20e eeuw is et Nederlaands of et Hoogduuts oek bie de eenvoudige luui der meer en meer in-ekeumen. De standardtalen kregen vanaof die tied meer anzien as et plat, dat lag onder aandere an et feit dat meensen steeds vakerder kontakten hadden buten der eigen darp of stad. Veur die tied hadden meensen niet zo vake kontakten buten der eigen darp of stad of in elk geval niet mit meensen die veerder weg woenden. Mit et opkoemen van de moederne mobiliteit, mit auto's, mit et wegtrekken van de veule darpsluui naor de stejen (industralisering) en mit et opkoemen van massamedia, die allinnig mer de standardtaal gebruken, was et belangrieker ewörden dat de meensen oek de standardtaal leerden.
+Van de [[16e eeuw|16e]] tot de [[20e eeuw]] was et Nedersaksisch, wat toe nog gewoon ''plat'' heetten, niet meer de taal van de haandelsluui mer steeds meer van de eenvoudige luui. Op schoele en in de karke wördden et Nederlaands of et Hoogduuts de voertaal. Vanaof de 20e eeuw is et Nederlaands of et Hoogduuts oek bie de eenvoudige luui der meer en meer in-ekeumen. De standardtalen kregen vanaof die tied meer anzien as et plat, dat lag onder aandere an et feit dat meensen steeds vakerder kontakten hadden buten der eigen darp of stad. Veur die tied hadden meensen niet zo vake kontakten buten der eigen darp of stad of in elk geval niet mit meensen die veerder weg woenden. Mit et opkoemen van de moederne mobiliteit, mit auto's, mit et wegtrekken van de veule darpsluui naor de stejen (industralisering) en mit et opkoemen van massamedia, die allinnig mer de standardtaal gebruken, was et belangrieker ewörden dat de meensen oek de standardtaal leerden.
 
 In sommige delen van et taalgebied is et Nedersaksisch tegenswoordig allinnig nog mer de taal van de wat ouwere luui, in aandere delen is et de normale umgangstaal, mit soms zelfs een meerderheid an dialektsprekers, allewel dat bie de jongeluui tegenswoordig al wat minder is.
 
@@ -39,7 +39,7 @@ In 2012 hef minister van Binnenlaandse zaken [[Liesbeth Spies]] laoten weten dat
 
 In 2013 wördden der naor anleiding van een debat over et gebruuk van et [[Frais|Fries]] een mosie in-ediend um et Neddersaksisch asnog erkent to kriegen. Disse mosie wördden op 4 juni 2013 aofekeurd deur de Tweede Kamer.
 
-==Et Nedersaksies-Nederduutse dialektkontinuüm==
+==Et Nedersaksisch-Nederduutse dialektkontinuüm==
 De dialekten van et Nedersaksisch vormen een [[taalkontinuüm]] mit de dialekten van noordelik [[Duutslaand]]. Daorumme wörden alle dialekten van de [[Veluwe]] tot an de [[Pooln|Poolse]] grens ezien as één taal, oek al besteet der gien standardvorm van.
 
 Toch besteet der een vrie groot verschil tussen et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]] en et [[Duuts-Nedersaksisch]], een verschil dat alsmer groter wördt. Et Nedersaksisch in Nederlaand steet onder drok van et [[Nederlaands]] en nimp daor steeds meer eigenschappen van over, veural an de westkaante waor et een dialektkontinuüm vormp mit de [[Nederfrankisch]]e dialekten. Et Nedersaksisch an de Duutse kaante hef van doon mit een starke invleud van et [[Duuts]] (Hoogduuts), die et een aandere kaante uutdrif, veural an de zuudkaante waor et een dialektkontinuüm vormp mit et Hoogduuts. Zokken verschillen zie'j veural a'j kieken naor de ontlening van nieje woorden en naor de schriefwieze. Zo hef et Duuts-Nedersaksisch de zongenaamde ''Großschreibung'' (et schrieven van heufdwoorden mit heufdletters) overeneumen van et Hoogduuts, terwiel dat verschiensel in de spelling van de Nederlaands-Nedersaksische dialekten van [[Nederlaand]] nargens veurkömp.
@@ -47,7 +47,7 @@ Toch besteet der een vrie groot verschil tussen et [[Nederlaands Leegsaksisch|Ne
 Wat de sprekers zelf angeet, hebben de Nedersaksische sprekers in Nederlaand der over et algemeen gien meuite mee um an te nemen dat ze in et noordelike deel Duutslaand een zelfde soort dialekten praoten. Aandersumme vienen de meeste Nedersaksische sprekers uut Duutslaand niet dat de taal deurlöp op Nederlaands grondgebied.
 
 ===Taalgrens===
-De heufdverdeling van et Nedersaksisch löp zo as ezeegd 'niet' langes et geschei van [[Nederlaand]] en [[Duutslaand]]. Integendeel: vake heurt een Nedersaksisch dialekt uut Nederlaand bie een groter Duuts gebied. Zo is et grootste gedeelte van et Nedersaksisch een onderdeel et [[Westfaals|Westfaols]] en heurt et [[Grunnegs|Gronings]] bie et Noord-Nedersaksies, veural bie et [[Oostfreisk Nederduutsk|Oostfrisch]]. Toch is et idee van de rieksgrens as taalgrens nog niet zo'n slicht idee: veural in de woordeschat bin der veule overeenkomsten tussen de dialekten an de Nederlaandse kaante, dit kömp deurdat - zo as hierboven al beschreven steet - der deur de eeuwen hinne, in Nederlaand naor et Nederlaands ekeken is veur nieje woorden en in Duutslaand naor et Duuts, deur disse ontwikkeling bin de dialekten soms iezelig vere uut mekaar egreuid. Et Gronings is een kleine uutzundering, veule Groningse woorden koemen oek in et [[Oostfreisk Nederduutsk|Oostfrisch]] veur.
+De heufdverdeling van et Nedersaksisch löp zo as ezeegd 'niet' langes et geschei van [[Nederlaand]] en [[Duutslaand]]. Integendeel: vake heurt een Nedersaksisch dialekt uut Nederlaand bie een groter Duuts gebied. Zo is et grootste gedeelte van et Nedersaksisch een onderdeel et [[Westfaals|Westfaols]] en heurt et [[Grunnegs|Gronings]] bie et Noord-Nedersaksisch, veural bie et [[Oostfreisk Nederduutsk|Oostfrisch]]. Toch is et idee van de rieksgrens as taalgrens nog niet zo'n slicht idee: veural in de woordeschat bin der veule overeenkomsten tussen de dialekten an de Nederlaandse kaante, dit kömp deurdat - zo as hierboven al beschreven steet - der deur de eeuwen hinne, in Nederlaand naor et Nederlaands ekeken is veur nieje woorden en in Duutslaand naor et Duuts, deur disse ontwikkeling bin de dialekten soms iezelig vere uut mekaar egreuid. Et Gronings is een kleine uutzundering, veule Groningse woorden koemen oek in et [[Oostfreisk Nederduutsk|Oostfrisch]] veur.
 
 ==Sprekersantallen==
 ===Nederlaand===
@@ -125,7 +125,7 @@ In Denemarken spreekt allinnig nog een fraksie van de Duutse minderheid (zo'n 20
 ===Wereldwied===
 In totaal kan et antal Nedersaksische sprekers in Europa, die de taal aordig goed spreken, hooguut acht miljoen bedragen; veur de staoten buten Europa, waor et Nedersaksisch (vake in de variëteit ''Plautdietsch'') espreuken wördt, bin meestentieds gien krekte antallen veurhaanden. Et antal Nedersaksische moerstaalsprekers wördt op zo'n één tot vier miljoen eschat.
 
-==Expansie en achteruutgang van et Nedersaksies==
+==Expansie en achteruutgang van et Nedersaksisch==
 ===Expansie===
 In feite waren der in de middeleeuwen dree algemene voertalen in et Duuts-Nederlaandse [[dialektkontinuüm]]:
 # Hoogduuts (waorveur de Duutse dialekten van de deelstaoten Saksen en Thüringen en de dialekten in et noorden van Bohemen et belangriekst waren),
@@ -134,7 +134,7 @@ In feite waren der in de middeleeuwen dree algemene voertalen in et Duuts-Nederl
 
 Sinds de Biebelvertaling van [[Maarten Luther]] begun et Oudnedersaksisch meer en meer plaotse te maken veur et Hoogduuts. In de [[16e eeuw]] wördden in de oostelike delen van Nederlaand oek wel een tussenvorm van et Nedersaksisch en et Vlaams-Braobaants (Nederdietsch) an-ebust onder de naam [[Oostersch]], mer disse taalvorm kon de stried mit et Nederlaands niet an.
 
-Dat et Nedersaksisch nog tot nao de middeleeuwen een "lingua franca" mit een bepaolde uutbreidingskracht is ebleven, blik uut et feit dat umstreeks 1500 de eertieds [[Freeske taaln|Friese]] dialekten in de Groninger [[Ommelaanden]] onder invleud van de van et Nedersaksische dialekt van de stad [[Grunnen (stad)|Groningen]] overgungen op et Nedersaksies. een Soortgeliek proces herhaolden zich minder as een eeuw laoter in [[Oostfrieslaand]].
+Dat et Nedersaksisch nog tot nao de middeleeuwen een "lingua franca" mit een bepaolde uutbreidingskracht is ebleven, blik uut et feit dat umstreeks 1500 de eertieds [[Freeske taaln|Friese]] dialekten in de Groninger [[Ommelaanden]] onder invleud van de van et Nedersaksische dialekt van de stad [[Grunnen (stad)|Groningen]] overgungen op et Nedersaksisch. een Soortgeliek proces herhaolden zich minder as een eeuw laoter in [[Oostfrieslaand]].
 
 ====Invleujen op aandere talen====
 {{Heufdartikel|Nedersaksische invloed op de Scandinavische talen|vel}}
@@ -153,7 +153,7 @@ In de tabel hieronder zie'j een koppel overeenkomsten en verschillen tussen de v
 |- bgcolor=#FFDEAD
 ! '''Oergermaans'''
 ! '''Hoogduuts'''
-! '''Nedersaksies'''
+! '''Nedersaksisch'''
 ! '''Nederlaands'''
 ! '''Engels'''
 ! '''Duuts'''
@@ -178,7 +178,7 @@ In de tabel hieronder zie'j een koppel overeenkomsten en verschillen tussen de v
 | β || b || wief, wieven || wijf, wijven ** || wife, wives || Weib, Weiber ** || wiif, wiven
 |}
 
-'''Antekening''':  *et Duutse woord ''Kerl'' is een leenwoord van et Nedersaksies; **De reeks ''Wief''-''wijf'', enz. bin [[kognaoten]], niet semantisch geliekweerdig. De betekenisse van sommigen van disse woorden bin in verloop van tied veraanderd. Et Engelse "wife" (echtgenote) is bieveurbeeld niet et zelfde as ''wief'' (vrouw).
+'''Antekening''':  *et Duutse woord ''Kerl'' is een leenwoord van et Nedersaksisch; **De reeks ''Wief''-''wijf'', enz. bin [[kognaoten]], niet semantisch geliekweerdig. De betekenisse van sommigen van disse woorden bin in verloop van tied veraanderd. Et Engelse "wife" (echtgenote) is bieveurbeeld niet et zelfde as ''wief'' (vrouw).
 
 ===Fonetiek===
 * Et behoud van de /l/ in -ol(d/t)- klusters waor et Nederlaands een vertweeklanking naor ou hef (old = oud, kold = koud, holt = hout, zie oek plaotsnamen as ''Holten'', ''Oldenzaal'' en ''Steenwiekerwold''). In et West-Veluws is, onder invleud van de Nederfrankische dialekten, de /ol/ grotendeels ummewisseld veur /ou/ (koud, hout, enz.), in [[Nunspeet]] he'j bieveurbeeld nog wel ''wol'' en ''zol'' naost ''hout''. In [[1850]] heurden Nunspeet en Elspeet oek nog bie et gebied waor ze allinnig mer /ol/ hadden.
@@ -210,15 +210,15 @@ In de tabel hieronder zie'j een koppel overeenkomsten en verschillen tussen de v
 [[Bestaand:Plattdüütsche Dialektrebeden.png|thumb|
 {{Kaortlegenda|#B0FF75|Westfaols}}
 {{Kaortlegenda|#66CCFF|Oostfaols}}
-{{Kaortlegenda|#99CC66|Noord-Nedersaksies}}
+{{Kaortlegenda|#99CC66|Noord-Nedersaksisch}}
 {{Kaortlegenda|#CCCC66|Holsteens}}
 {{Kaortlegenda|#FFFFCC|Sleeswieks}}
 {{Kaortlegenda|#99CC33|Branenburgs}}
 {{Kaortlegenda|#99FFCC|Mekelenburgs-Veur-Pommers}}
 {{Kaortlegenda|#CCCC66|Pommers}}
-{{Kaortlegenda|#66CCCC|Nederprusies}}
+{{Kaortlegenda|#66CCCC|Nederprusisch}}
 Staand van veur 1945]]
-[[Bestaand:Isoglossen.svg|thumb|Een antal van de belangriekste isoglossen van et Nedersaksies<br />
+[[Bestaand:Isoglossen.svg|thumb|Een antal van de belangriekste isoglossen van et Nedersaksisch<br />
 {{Kaortlegenda|#3afe33|E-apokope}}
 {{Kaortlegenda|#0000ff|Eenheidsmeervoud -en/-t}}
 {{Kaortlegenda|#ff9e00|Dat/det}}
@@ -245,7 +245,7 @@ De dialektindeling van [[Jo Daan]]<ref>[http://neon.niederlandistik.fu-berlin.de
 
 == Nedersaksische spelling ==
 {{Heufdartikel|Leegsaksische orthogroafie|vel}}
-Der is nog gien officieel an-eneumen spelling veur et Nedersaksies. Der hebben wel veurstellen ewest, zo as de [[Vosbergenschriefwiese]] uut [[1955]] (veur et Nedersaksisch uut Nederlaand en Duutslaand) en de [[SONT-spelling]] uut [[2000]] (veur et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]]), die allebeie niet an-eneumen bin. De SONT-spelling hef de meeste anhang van de twee, mer plaotselike spellingsrichtlienden bin et gebrukelikst. In [[2011]] is de [[Algemene Nedersaksische Schriefwieze]] ontwikkeld, en is een verfiening, vereenvoudiging en uutbreiding van de SONT-spelling. In [[2018]] is de [[Nysassiske Skryvwyse]] uutebrocht, dat een veerdere uutwarking is van de inkomplete [[Algemeyne Schryvwys']]. Disse twee schriefwiezes bin de veurkeursspelling op de [[Nedersaksische Wikipedie]].
+Der is nog gien officieel an-eneumen spelling veur et Nedersaksisch. Der hebben wel veurstellen ewest, zo as de [[Vosbergenschriefwiese]] uut [[1955]] (veur et Nedersaksisch uut Nederlaand en Duutslaand) en de [[SONT-spelling]] uut [[2000]] (veur et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]]), die allebeie niet an-eneumen bin. De SONT-spelling hef de meeste anhang van de twee, mer plaotselike spellingsrichtlienden bin et gebrukelikst. In [[2011]] is de [[Algemene Nedersaksische Schriefwieze]] ontwikkeld, en is een verfiening, vereenvoudiging en uutbreiding van de SONT-spelling. In [[2018]] is de [[Nysassiske Skryvwyse]] uutebrocht, dat een veerdere uutwarking is van de inkomplete [[Algemeyne Schryvwys']]. Disse twee schriefwiezes bin de veurkeursspelling op de [[Nedersaksische Wikipedie]].
 
 ==Veurbeeldzinnen==
 {{Heufdartikel|Nedersaksische zinnen|vel}}
@@ -331,7 +331,7 @@ Elk Nedersaksisch heufddialekt uut Nederlaand (behalven et Urkers) hef zien eige
 * [[Sallaans|Sallaands]] - ''sdz''
 * [[Stellingwarfs]] - ''stl''
 * [[Tweants]] - ''twd''
-* [[Urkers]] - ''nds-us''<ref>As onderdeel van et Nedersaksies. Et Urkers hef niet zien eigen aparte kode.</ref>
+* [[Urkers]] - ''nds-us''<ref>As onderdeel van et Nedersaksisch. Et Urkers hef niet zien eigen aparte kode.</ref>
 * [[Veluws]] - ''vel''<ref>In eerdere versies van [[Ethnologue]] waren der amparte kodes veur et West- en Oost-Veluws, disse kodes bin intied vervöllen en vervöngen deur één kode veur et Veluws (vel)</ref>
 
 ==Zie oek==
@@ -345,7 +345,7 @@ Elk Nedersaksisch heufddialekt uut Nederlaand (behalven et Urkers) hef zien eige
 <references />
 
 ==Uutgaonde verwiezingen==
-{{Interwiki|kode=nds|naam=Duuts-Nedersaksiese}}
+{{Interwiki|kode=nds|naam=Duuts-Nedersaksische}}
 '''Woordeboeken:'''
 * [http://www.plattmakers.de/?lang=nds Plattmakers woordeboek]
 * [http://www.drentswoordenboek.nl/ Drents woordeboek]
@@ -357,12 +357,12 @@ Elk Nedersaksisch heufddialekt uut Nederlaand (behalven et Urkers) hef zien eige
 * [http://www.plattcast.de/ Platduutse/Nedersaksische podcasts, audio en video's] (Oolland)
 * [http://www.mennolink.org/doc/lg/index.html Plautdietsch-Engels woordeboek]
 * [http://www.lowlands-l.net/index.php?page=links_nds Lieste mit verwiezingen, an-ebeujen deur Lowlands List]
-* [http://taal.phileon.nl/nds/ Streektaal.net, informasie in en over verschillende soorten Nedersaksies]
-* [http://lowlands-l.net/plattewelt/ Nu is de Welt platt!, internasionale bronnen in en over et Nedersaksies]
+* [http://taal.phileon.nl/nds/ Streektaal.net, informasie in en over verschillende soorten Nedersaksisch]
+* [http://lowlands-l.net/plattewelt/ Nu is de Welt platt!, internasionale bronnen in en over et Nedersaksisch]
 * [http://www.plattdeutsch-niederdeutsch.net/ Niederdeutsch/Plattdeutsch in Westfalen, deur Olaf Bordasch]
 * [http://www.plattdeutsch.net/ Mönsterlänner Plat, deur Klaus-Werner Kahl]
 * [http://www.ins-bremen.de/Geschichte/ndintroh.htm Plattdeutsch heute]
-* [http://lowlands-l.net/grammar/ Bouwstenen van et Nedersaksies, een inleiende grammatika in et Engels en et Duuts]
+* [http://lowlands-l.net/grammar/ Bouwstenen van et Nedersaksisch, een inleiende grammatika in et Engels en et Duuts]
 
 '''Organisasies:'''
 * [http://www.ijsselacademie.nl/ IJsselacademie] (Overiessel, de Veluwe en Urk, Nederlaand)
